[project]
name = "datasette-enrichments-gmap-geocode"
version = "0.1"
description = "Geocoding enrichment using Google Maps API"
readme = "README.md"
authors = [{name = "Hamilton Carter"}]
license = {text = "Apache-2.0"}
classifiers=[
    "Framework :: Datasette",
    "License :: OSI Approved :: Apache Software License"
]
requires-python = ">=3.8"
dependencies = [
    "datasette",
    "datasette-enrichments>=0.2",
    "sqlite-utils",
]

[project.urls]
Homepage = "https://github.com/datasette/datasette-enrichments-gmap-geocode"
Changelog = "https://github.com/datasette/datasette-enrichments-gmap-geocode/releases"
Issues = "https://github.com/datasette/datasette-enrichments-gmap-geocode/issues"
CI = "https://github.com/datasette/datasette-enrichments-gmap-geocode/actions"

[project.entry-points.datasette]
datasette_enrichments_gmap_geocode = "datasette_enrichments_gmap_geocode"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "pytest-httpx", "datasette-enrichments-opencage"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
