[project]
name = "datasette-enrichments-gmap-geocode"
version = "0.1.3"
description = "Geocoding enrichment using Google Maps API"
readme = "README.md"
authors = [{name = "Hamilton Carter"}]
license = {text = "Apache-2.0"}
classifiers=[
    "Framework :: Datasette",
    "License :: OSI Approved :: Apache Software License"
]
requires-python = ">=3.8"
dependencies = [
    "datasette",
    "datasette-enrichments>=0.2",
    "sqlite-utils",
]

[project.urls]
Homepage = "https://github.com/datasette/datasette-enrichments-gmap-geocode"
Changelog = "https://github.com/datasette/datasette-enrichments-gmap-geocode/releases"
Issues = "https://github.com/datasette/datasette-enrichments-gmap-geocode/issues"
CI = "https://github.com/datasette/datasette-enrichments-gmap-geocode/actions"

[project.entry-points.datasette]
enrichments_gmap_geocode = "datasette_enrichments_gmap_geocode"

[project.optional-dependencies]
test = ["pytest<=7.4.3", "pytest-asyncio<=0.21.1", "pytest-httpx"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
